internal/lang/test/testdata/errors/unknown_field.scampi
module main

import "std/posix"

posix.pkg { packages = ["nginx"], source = posix.pkg_system {}, bogus = "oops" }
